Mobile CSS added.

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -34,3 +34,25 @@
   color: rgb(211, 211, 211);
   width: 80%;
 }
+
+@media screen and (max-width: 480px) {
+  .container {
+    height: auto;
+    text-align: center;
+  }
+  .item:first-child {
+    display: none;
+  }
+
+  .item {
+    flex-direction: column;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
+  .text {
+    font-size: 20px;
+  }
+}
